--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Program Files\Python311
+home = /Library/Frameworks/Python.framework/Versions/3.11/bin
 include-system-site-packages = false
-version = 3.11.4
-executable = C:\Program Files\Python311\python.exe
-command = C:\Program Files\Python311\python.exe -m venv C:\Users\S3U2\Desktop\S3U2\CloudflareBypassForScraping_S3
+version = 3.11.9
+executable = /Library/Frameworks/Python.framework/Versions/3.11/bin/python3.11
+command = /Library/Frameworks/Python.framework/Versions/3.11/bin/python3.11 -m venv /Users/vlad5322/Desktop/work/real_bot
