--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ et-xmlfile==1.1.0
 filelock==3.16.1
 idna==3.10
 lxml==5.3.0
-numpy==2.1.2
+numpy
 opencv-python==4.10.0.84
 openpyxl==3.1.5
 packaging==24.1
