--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = /Library/Frameworks/Python.framework/Versions/3.11/bin
+home = C:\Program Files\Python311
 include-system-site-packages = false
-version = 3.11.9
-executable = /Library/Frameworks/Python.framework/Versions/3.11/bin/python3.11
-command = /Library/Frameworks/Python.framework/Versions/3.11/bin/python3.11 -m venv /Users/vlad5322/Desktop/work/real_bot
+version = 3.11.3
+executable = C:\Program Files\Python311\python.exe
+command = C:\Program Files\Python311\python.exe -m venv C:\Users\Влад\Desktop\work\real_bot
