--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+bottle==0.13.4
+bottle-websocket==0.2.9
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
@@ -6,20 +9,30 @@ cssselect==1.2.0
 DataRecorder==3.5.3
 DownloadKit==2.0.4
 DrissionPage==4.0.5.6
+Eel==0.18.2
 et-xmlfile==1.1.0
 filelock==3.16.1
+future==1.0.0
+gevent==25.5.1
+gevent-websocket==0.10.1
+greenlet==3.2.4
 idna==3.10
+importlib_resources==6.5.2
 lxml==5.3.0
-numpy
+numpy==2.3.2
 opencv-python==4.10.0.84
 openpyxl==3.1.5
 packaging==24.1
 pillow==11.0.0
 psutil==6.0.0
+pycparser==2.22
+pyparsing==3.2.3
 pytesseract==0.3.13
 requests==2.32.3
 requests-file==2.1.0
 tldextract==5.1.2
+typing_extensions==4.14.1
 urllib3==2.2.3
 websocket-client==1.8.0
-Eel
+zope.event==5.1.1
+zope.interface==7.2
