--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Program Files\Python311
+home = C:\Python313
 include-system-site-packages = false
-version = 3.11.3
-executable = C:\Program Files\Python311\python.exe
-command = C:\Program Files\Python311\python.exe -m venv C:\Users\Влад\Desktop\work\real_bot
+version = 3.13.7
+executable = C:\Python313\python.exe
+command = C:\Python313\python.exe -m venv D:\work\real_bot
